--- a/SimpleEmptyDataSet/SimpleEmptyDataSet.xib
+++ b/SimpleEmptyDataSet/SimpleEmptyDataSet.xib
@@ -13,6 +13,12 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SimpleEmptyDataSet" customModule="SimpleEmptyDataSet" customModuleProvider="target">
             <connections>
+                <outlet property="errorDescriptionLabel" destination="d5J-n1-jHy" id="DHh-CT-JXV"/>
+                <outlet property="errorDescriptionLabel_top_errorImageView" destination="LSF-uk-Jb0" id="m0x-sY-Wii"/>
+                <outlet property="errorDescriptionLabel_top_errorTitelLabel" destination="jHR-6p-h5Q" id="3dG-wD-8EO"/>
+                <outlet property="errorImageView" destination="5yd-Xb-cfk" id="LM8-bz-oON"/>
+                <outlet property="errorTitleLabel" destination="tJE-fI-iH9" id="8CK-jc-hrU"/>
+                <outlet property="errorView" destination="o0u-wR-K4d" id="HDS-1C-qt3"/>
                 <outlet property="view" destination="iN0-l3-epB" id="Kz7-GD-ymD"/>
             </connections>
         </placeholder>
@@ -22,22 +28,22 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o0u-wR-K4d" userLabel="Error View">
-                    <rect key="frame" x="37.5" y="211" width="300" height="246"/>
+                    <rect key="frame" x="38" y="210" width="300" height="247"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ErrorMessage" translatesAutoresizingMaskIntoConstraints="NO" id="5yd-Xb-cfk">
-                            <rect key="frame" x="105" y="0.5" width="90" height="90"/>
+                            <rect key="frame" x="105" y="0.0" width="90" height="90"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="5yd-Xb-cfk" secondAttribute="height" multiplier="1:1" id="Bw6-dI-HG7"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Instagram Direct" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tJE-fI-iH9">
-                            <rect key="frame" x="0.0" y="110.5" width="300" height="31.5"/>
+                            <rect key="frame" x="0.0" y="110" width="300" height="32"/>
                             <fontDescription key="fontDescription" type="system" weight="light" pointSize="26"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Send Photos and videos directly to your friends. Only the people you send can see these posts." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d5J-n1-jHy">
-                            <rect key="frame" x="0.0" y="162" width="300" height="64.5"/>
+                            <rect key="frame" x="0.0" y="162" width="300" height="65"/>
                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.69999999999999996" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
@@ -48,12 +54,13 @@
                         <constraint firstItem="5yd-Xb-cfk" firstAttribute="width" secondItem="o0u-wR-K4d" secondAttribute="width" multiplier="0.3" id="Btg-Jm-OoT"/>
                         <constraint firstItem="d5J-n1-jHy" firstAttribute="leading" secondItem="o0u-wR-K4d" secondAttribute="leading" id="DwW-wq-6nf"/>
                         <constraint firstAttribute="trailing" secondItem="tJE-fI-iH9" secondAttribute="trailing" id="JKB-tV-E3k"/>
+                        <constraint firstItem="d5J-n1-jHy" firstAttribute="top" secondItem="5yd-Xb-cfk" secondAttribute="bottom" priority="1" id="LSF-uk-Jb0"/>
                         <constraint firstItem="5yd-Xb-cfk" firstAttribute="top" secondItem="o0u-wR-K4d" secondAttribute="top" id="PAo-Qo-M89"/>
                         <constraint firstItem="tJE-fI-iH9" firstAttribute="leading" secondItem="o0u-wR-K4d" secondAttribute="leading" id="URd-8a-2FK"/>
                         <constraint firstItem="5yd-Xb-cfk" firstAttribute="centerX" secondItem="o0u-wR-K4d" secondAttribute="centerX" id="XYp-Pr-srN"/>
                         <constraint firstItem="tJE-fI-iH9" firstAttribute="top" secondItem="5yd-Xb-cfk" secondAttribute="bottom" constant="20" id="YuP-yx-aLx"/>
                         <constraint firstAttribute="bottom" secondItem="d5J-n1-jHy" secondAttribute="bottom" constant="20" id="bQ2-se-lrS"/>
-                        <constraint firstItem="d5J-n1-jHy" firstAttribute="top" secondItem="tJE-fI-iH9" secondAttribute="bottom" constant="20" id="jHR-6p-h5Q"/>
+                        <constraint firstItem="d5J-n1-jHy" firstAttribute="top" secondItem="tJE-fI-iH9" secondAttribute="bottom" priority="999" constant="20" id="jHR-6p-h5Q"/>
                         <constraint firstAttribute="trailing" secondItem="d5J-n1-jHy" secondAttribute="trailing" id="uys-i2-4ZU"/>
                     </constraints>
                 </view>
